@@ -3783,7 +3783,7 @@ LISPFUNN(syntax_error_reader,3) { # reads #) and #whitespace
 # UP: checks, if Feature-Expression is satisfied.
 # interpret_feature(expr)
 # > expr: a Feature-Expresion
-# > STACK_1: Stream
+# > STACK_1: Stream or unbound
 # < result: truth value: 0 if satisfied, ~0 if not.
 local uintWL interpret_feature (object expr) {
   check_SP();
@@ -3820,15 +3820,18 @@ local uintWL interpret_feature (object expr) {
     }
     # wrong (car expr) -> error
   }
- bad: {                      /* wrong structure of Feature-Expression */
-    var bool called_from_read_p = streamp(STACK_1);
-    if (called_from_read_p) pushSTACK(STACK_1); /* STREAM-ERROR slot STREAM */
-    pushSTACK(expr);              /* Feature-Expression */
-    if (called_from_read_p) {
-      pushSTACK(STACK_(1+2)); /* Stream */
+ bad: {
+    /* Wrong structure of feature expression. */
+    if (boundp(STACK_1)) {
+      /* Called from READ. */
+      pushSTACK(STACK_1); # STREAM-ERROR slot STREAM
+      pushSTACK(expr); # Feature-Expression
+      pushSTACK(STACK_(1+2)); # Stream
       pushSTACK(S(read));
       fehler(reader_error,GETTEXT("~S from ~S: illegal feature ~S"));
     } else {
+      /* Called from FEATUREP. */
+      pushSTACK(expr); # Feature-Expression
       pushSTACK(TheSubr(subr_self)->name);
       fehler(error,GETTEXT("~S: illegal feature ~S"));
     }
@@ -3839,7 +3842,7 @@ local uintWL interpret_feature (object expr) {
    <http://clrfi.alu.org/clrfi/clrfi-1-featurep> */
 LISPFUNNR(featurep,1) {
   pushSTACK(STACK_0); /* interpret_feature checks STACK_1 */
-  STACK_1 = S(featurep);
+  STACK_1 = unbound;
   VALUES_IF(!interpret_feature(STACK_0));
   skipSTACK(2);
 }
